src/test/ui/methods/method-deref-to-same-trait-object-with-separate-params.stderr
error[E0308]: mismatched types
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:85:24
   |
LL |     let _seetype: () = z;
   |                   --   ^ expected `()`, found `u32`
   |                   |
   |                   expected due to this

error[E0308]: mismatched types
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:102:24
   |
LL |     let _seetype: () = z;
   |                   --   ^ expected `()`, found `u64`
   |                   |
   |                   expected due to this

error[E0034]: multiple applicable items in scope
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:120:15
   |
LL |     let z = x.foo();
   |               ^^^ multiple `foo` found
   |
note: candidates defined here:
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:43:9
   |
LL |         fn foo(self: Smaht<Self, u64>) -> u64 {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ candidate #1 is defined in an impl of the trait `internal::X` for the type `_`
...
LL |     fn foo(&self) -> u8;
   |     ^^^^^^^^^^^^^^^^^^^^ candidate #3 is defined in the trait `FinalFoo`
...
LL |         fn foo(self) {}
   |         ^^^^^^^^^^^^ candidate #2 is defined in an impl of the trait `nuisance_foo::NuisanceFoo` for the type `_`
help: disambiguate the method call for candidate #1
   |
LL |     let z = internal::X::foo(x);
   |             ^^^^^^^^^^^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     let z = nuisance_foo::NuisanceFoo::foo(x);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: disambiguate the method call for candidate #3
   |
LL |     let z = FinalFoo::foo(x);
   |             ^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:137:24
   |
LL |     let _seetype: () = z;
   |                   --   ^ expected `()`, found `u8`
   |                   |
   |                   expected due to this

error[E0308]: mismatched types
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:155:24
   |
LL |     let _seetype: () = z;
   |                   --   ^ expected `()`, found `u32`
   |                   |
   |                   expected due to this

error[E0308]: mismatched types
  --> $DIR/method-deref-to-same-trait-object-with-separate-params.rs:172:24
   |
LL |     let _seetype: () = z;
   |                   --   ^ expected `()`, found `u32`
   |                   |
   |                   expected due to this

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0034, E0308.
For more information about an error, try `rustc --explain E0034`.
